2006-08-08  Mo DeJong  <mdejong@users.sourceforge.net>

        * known_issues.txt: Mention gcc bug.

2006-08-08  Mo DeJong  <mdejong@users.sourceforge.net>

        * README.jacl: Mention that JDK 1.2 or newer is
        required to build Jacl.

2006-07-18  Mo DeJong  <mdejong@users.sourceforge.net>

        * announce: Update for 1.3.3 release.
        * known_issues.txt: Mention encoding bug.

2006-07-18  Mo DeJong  <mdejong@users.sourceforge.net>

        * src/jacl/tcl/lang/QSort.java (doDictionary):
        Reimplement dictionary compare based on Tcl 8.4.
        * tests/tcl/lsort.test: Add test cases that
        expose broken dictionary sort order.

2006-06-29  Mo DeJong  <mdejong@users.sourceforge.net>

        * tests/tcljava/FuncSig.test: Fixup signature
        so that test passes under JDK 1.5

2006-06-29  Mo DeJong  <mdejong@users.sourceforge.net>

        * README.jacl:
        * README.tclblend: Mention that Jacl and Tcl Blend
        are production ready and include URLs for build
        notes on the wiki.

2006-06-29  Mo DeJong  <mdejong@users.sourceforge.net>

        Update version numbers to 1.3.3.

        * configure:
        * configure.in:
        * src/pkgIndex.tcl:
        * src/jacl/tcl/lang/Interp.java:
        * src/tcljava/tcl/lang/BlendExtension.java:
        * unix/tools/vutil/current:
        * win/makefile.vc:

2006-06-29  Mo DeJong  <mdejong@users.sourceforge.net>

        * configure: Regen.
        * configure.in: Set default --prefix to /usr/local.

2006-04-05  Mo DeJong  <mdejong@users.sourceforge.net>

        * src/tclblend/tcl/lang/Interp.java (evalFile):
        Add TclBlend implementation of Interp.evalFile().

2006-04-05  Mo DeJong  <mdejong@users.sourceforge.net>

        * src/jacl/tcl/lang/ExecCmd.java (cmdProc):
        Reimplement JDK 1.3 and newer exec so that two
        threads are created. One reads stdout of the
        subprocess while the other reads stderr. This