@@ -65,20 +65,32 @@
          <TABLE>
             <TR>
                <TD VALIGN=top>
-                  <B>July 28, 2005:</B>&nbsp;
+                  <B>August 8, 2006:</B>&nbsp;
                </TD>
                <TD>
-                  New Tcl/Java 1.3.2 release!<BR>
+                  New Tcl/Java 1.3.3 release!<BR>
                   This release is considered stable
                   and is ready for use in production
                   environments.
                   <UL>
+                     <LI>Fix exec deadlock in Jacl</LI>
+                     <LI>Fix default --prefix option</LI>
+                     <LI>Fix lsort -dictionary sort order</LI>
+                     <LI>Tcl Blend works with Tcl 8.4.13.</LI>
+                  </UL>
+               </TD>
+            </TR>
+
+            <TR>
+               <TD VALIGN=top>
+                  <B>July 28, 2005:</B>&nbsp;
+               </TD>
+               <TD>
+                  New Tcl/Java 1.3.2 release!<BR>
+                  <UL>
                      <LI>Tcl Blend works with Tcl 8.4.11.</LI>
                      <LI>New Win32 BAT startup scripts.</LI>
-                     <LI>Fix build issues under Win32 and Unix.</LI>
-                     <LI>Fix build issues with JDK 1.4 and 1.5</LI>
-                     <LI>Fix JNI link error under Win32.</LI>
-                     <LI>Fix a bunch of minor bugs.</LI>
+                     <LI>Fixes a bunch of minor bugs.</LI>
                   </UL>
                </TD>
             </TR>
